<resources>
    <string name="app_name">Bookkeeping</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Daily Account Book</string>
    <string name="menu_gallery">Travel Book</string>

    <string name="bottom_bookkeeping">Bookkeeping</string>
    <string name="bottom_report">Report</string>
    <string name="bottom_mine">Mine</string>

    <string name="bookkeeping_balance"> 403.55 \n 本月结算余额</string>
    <string name="bookkeeping_month_income">200.55 \n 本月收入</string>
    <string name="bookkeeping_month_spend">13.55 \n 本月支出</string>

    <string name="nav_add_item">AddItem</string>
    <string name="nav_add_new_classification">AddNewClassification</string>

    <string name="tab_spend">Spend</string>
    <string name="tab_income">Income</string>

    <string name="mine_login">Login</string>
    <string name="mine_register">Register</string>
    <string name="mine_login_register">Login/Register</string>
    <string name="mine_common_question">Common Questions</string>
    <string name="mine_feedback">Feedback</string>
    <string name="mine_exchange">Exchange Rage</string>
    <string name="mine_setting">Setting</string>

    <string name="login_google">Sign in with Google</string>
    <string name="login_facebook">Sign in with Facebook</string>
    <string name="login_email">Sign in with Email</string>

    <string name="facebook_app_id">1955980534542765</string>
    <string name="fb_login_protocol_scheme">fb1955980534542765</string>

    <string name="feedback_advice">Please leave your valuable comments or suggestions and we will try our best to improve them.</string>
    <string name="feedback_phone">Please leave your contact information so that I can contact you better.</string>
    <string name="feedback_submit">Submit</string>

    <string name="setting_current_version">Current Version</string>
    <string name="setting_user_protocol">User Protocol</string>
    <string name="setting_about_me">About Me</string>


</resources>