<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_bookkeeping">

    <fragment
        android:id="@+id/nav_bookkeeping"
        android:name="com.hannah.demo.ui.bookkeeping.BookkeepingFragment"
        android:label="@string/bottom_bookkeeping"
        tools:layout="@layout/fragment_bookkeeping" />

    <fragment
        android:id="@+id/nav_report"
        android:name="com.hannah.demo.ui.report.ReportFragment"
        android:label="@string/bottom_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/nav_mine"
        android:name="com.hannah.demo.ui.mine.MineFragment"
        android:label="@string/bottom_mine"
        tools:layout="@layout/fragment_mine" />
</navigation>