<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light_gray" >

    <LinearLayout
        android:id="@+id/layout_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_150"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:padding="@dimen/dp_10"
        android:background="@drawable/button_background_login"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/icon_login_width"
            android:layout_height="@dimen/icon_login_height"
            android:src="@mipmap/ic_google"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/login_google"
            android:gravity="center"
            android:textSize="@dimen/text_medium"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:padding="@dimen/dp_10"
        android:background="@drawable/button_background_login"
        app:layout_constraintTop_toBottomOf="@+id/layout_google"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/icon_login_width"
            android:layout_height="@dimen/icon_login_height"
            android:src="@mipmap/ic_facebook"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/login_facebook"
            android:gravity="center"
            android:textSize="@dimen/text_medium"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@drawable/button_background_login"
        app:layout_constraintTop_toBottomOf="@+id/layout_facebook"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/icon_login_width"
            android:layout_height="@dimen/icon_login_height"
            android:src="@mipmap/ic_email"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/login_email"
            android:gravity="center"
            android:textSize="@dimen/text_medium"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>